--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src="go to the tree logo.png" alt="logo">
     </div>
     <div>
-        <a href="https://github.com/dashboard"><!--substituir por link da page do projeto principal-->
-        <button href="https://github.com/2Cnieh52/Go-to-the-tree">JOGAR</button></a>
+        <a href="https://2cnieh52.github.io/Go-to-the-tree/"><!--substituir por link da page do projeto principal-->
+        <button>JOGAR</button></a>
     </div>
 
 
