--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="go to the tree logo.png" alt="logo">
     </div>
     <div>
-        <a href="https://2cnieh52.github.io/Go-to-the-tree/"><!--substituir por link da page do projeto principal-->
+        <a href="https://2cnieh52.github.io/Go-to-the-tree/">
         <button>JOGAR</button></a>
     </div>
 
